2008-04-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added --quiet option to make aria2 quiet (no console output).
	--quiet option is tagged with ADVANCED.
	* src/HelpItemFactory.cc
	* src/LogFactory.cc
	* src/LogFactory.h
	* src/MultiUrlRequestInfo.cc
	* src/MultiUrlRequestInfo.h
	* src/NullStatCalc.h: New class. This class prints nothing.
	* src/OptionHandlerFactory.cc
	* src/main.cc
	* src/option_processing.cc
	* src/prefs.h
	* src/usage_text.h

2008-04-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Add HTTP tag to --header option. Removed ADVANCED tag instead.
	* src/HelpItemFactory.cc (createHelpItems): 

2008-04-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed compilation error in ExpatMetalinkProcessor.cc
	* src/ExpatMetalinkProcessor.cc

2008-04-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Reuse socket if the origin server supports HTTP keep-alive and
	--enable-http-keep-alive or --enable-http-pipelining is given.
	The current implementation doesn't reuse the connections established
	against proxy server.

	* src/AbstractCommand.cc
	* src/DownloadEngine.cc
	* src/DownloadEngine.h
	* src/HttpDownloadCommand.cc
	* src/HttpInitiateConnectionCommand.cc
	* src/HttpResponseCommand.cc

2008-04-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Rewritten HTTP keep-alive and pipelining routine.
	* src/AbstractCommand.cc
	* src/HttpConnection.cc
	* src/HttpDownloadCommand.cc
	* src/HttpRequest.cc
	* src/HttpRequestCommand.cc
	* src/HttpResponseCommand.cc
	* src/Request.cc
	* src/Request.h
	* src/RequestGroup.cc
	* test/HttpRequestTest.cc
	* test/HttpResponseTest.cc
	* test/RequestTest.cc

2008-04-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added missing setUserHeaders call
	* src/HttpRequestCommand.cc

2008-04-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Call FileAllocationMan::nextFileAllocationEntryExists() first.
	Calling FileAllocationMan::isFileAllocationBeingExecuted() is somwhat